Bug 1610171 - Fix SVGAnimatedTransformList optimization to avoid pathological frame reconstruction. r=jwatt

The optimization here was trying to avoid reconstructing in some cases when we
started animating a transform. Unfortunately it wasn't handling the transform
animations properly, which means that once it decided that _adding_ the
transform value needed a reconstruction, it was deciding that _changing_ it also
needed.

Which means that we reconstructed the frames once per animation frame, which is
pretty sad.

While fixing the optimization, also use a more comprehensive change hint, the
one that we use for transform property changes as well.

Differential Revision: https://phabricator.services.mozilla.com/D63803