dom/svg/SVGAnimatedTransformList.cpp
@@ -60,16 +60,16 @@ nsresult SVGAnimatedTransformList::SetBaseValue(const SVGTransformList& aValue,
     domWrapper->InternalBaseValListWillChangeLengthTo(mBaseVal.Length());
   } else {
     mIsAttrSet = true;
-    // We only need to reconstruct the frame for aSVGElement if it already
-    // exists and the stacking context changes because a transform is created.
-    mRequiresFrameReconstruction =
+    // We only need to treat this as a creation or removal of a transform if the
+    // frame already exists and it didn't have an existing one.
+    mCreatedOrRemovedOnLastChange =
         aSVGElement->GetPrimaryFrame() && !hadTransform;
   }
   return rv;
 }
 
 void SVGAnimatedTransformList::ClearBaseValue() {
-  mRequiresFrameReconstruction = !HasTransform();
+  mCreatedOrRemovedOnLastChange = !HasTransform();
 
   DOMSVGAnimatedTransformList* domWrapper =
       DOMSVGAnimatedTransformList::GetDOMWrapperIfExists(this);
@@ -122,6 +122,8 @@ nsresult SVGAnimatedTransformList::SetAnimValue(const SVGTransformList& aValue,
   } else {
     modType = MutationEvent_Binding::ADDITION;
   }
+  mCreatedOrRemovedOnLastChange =
+      modType == MutationEvent_Binding::ADDITION;
   aElement->DidAnimateTransformList(modType);
   return NS_OK;
 }
@@ -144,6 +146,8 @@ void SVGAnimatedTransformList::ClearAnimValue(SVGElement* aElement) {
   } else {
     modType = MutationEvent_Binding::REMOVAL;
   }
+  mCreatedOrRemovedOnLastChange =
+      modType == MutationEvent_Binding::REMOVAL;
   aElement->DidAnimateTransformList(modType);
 }
 
